--- a/app/src/main/res/layout/char_disp_view.xml
+++ b/app/src/main/res/layout/char_disp_view.xml
@@ -6,25 +6,27 @@
     android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/colourIv"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:background="@color/blue"/>
     <TextView
         android:id="@+id/itemNameTv"
-        android:layout_marginLeft="4dp"
+        android:layout_marginLeft="12dp"
         android:textColor="@color/black"
-        android:textSize="12dp"
+        android:textSize="20sp"
         android:gravity="center"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_height="40dp"
         android:text="Games"/>
     <TextView
         android:id="@+id/itemAmountTv"
-        android:layout_marginLeft="4dp"
+        android:layout_marginLeft="12dp"
         android:textColor="@color/black"
-        android:textSize="12dp"
+        android:textSize="20sp"
         android:gravity="center"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_height="40dp"
         android:text="Games"/>
 </LinearLayout>
